--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,7 +101,7 @@ img {
 /*!  NAVBAR  !*/
 
 .active{
-    filter: invert(19%) sepia(52%) saturate(6157%) hue-rotate(331deg) brightness(89%) contrast(98%);
+    filter: invert(19%) sepia(52%) saturate(6157%) hue-rotate(331deg) brightness(89%) contrast(98%) drop-shadow(0px 0px 5px #D9113A);
 }
 
 li:hover, .langage__container:hover, .dice__logo:hover{
@@ -132,6 +132,7 @@ li:hover, .langage__container:hover, .dice__logo:hover{
 }
 
 .langage__container {
+    position: fixed;
     bottom: 1.5rem;
 }
 
@@ -147,7 +148,6 @@ li:hover, .langage__container:hover, .dice__logo:hover{
     display: flex;
     justify-content: center;
     width: 110px;
-    position: sticky;
     background: var(--first-color-lighten);
 }
 
@@ -169,7 +169,7 @@ li:hover, .langage__container:hover, .dice__logo:hover{
 }
 
 .navbar__item, .active{
-    width: 1.8rem
+    width: 1.8rem;
 }
 
 @media screen and (max-width: 1280px) {
